refactor: 코드 리뷰 반영 - listener AFTER_COMMIT + 테스트 보강
- UserAccountEventListener를 @TransactionalEventListener(AFTER_COMMIT)로 변경: 외부 트랜잭션 커밋 후에만 토큰 삭제·로그 기록되어 비정합 방지
- UserAccountEventListenerTest 단위 테스트 신설: withdraw/passwordChanged 부수 효과 검증
- AnomalyEventQueryService: Collections.emptyList() → List.of() 통일

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>